k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oj
  namespace: oj
spec:
  ingressClassName: traefik

  rules:
    - host: judge.namanarora.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: client
                port:
                  number: 3000

    - host: api-judge.namanarora.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 5000
